--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="invalid_credentials">Invalid credentials</string>
     <string name="user_already_exists">User already exists with this email</string>
     <string name="error_occurred">An error occurred</string>
+    <string name="refresh">Refresh</string>
 </resources>
